Fix range highlighting and updated homepage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="An easy to use react based code editor with syntax highlighting."
+    />
     <title>react-easy-code-editor</title>
+    <link rel="icon" href="./react.svg" sizes="any" type="image/svg+xml" />
   </head>
   <body>
     <div id="root"></div>
